Commit for change V6

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is design added file</h1>
+    <h1>This is design added file v6.1</h1>
 </body>
 </html>
